WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81530
platform/mac/accessibility/selected-rows-table.html failing on Lion Intel Debug WebKit2 testers
https://bugs.webkit.org/show_bug.cgi?id=81530
Summary
platform/mac/accessibility/selected-rows-table.html failing on Lion Intel Deb...
Jessie Berlin
Reported
2012-03-19 11:31:48 PDT
http://build.webkit.org/results/Lion%20Intel%20Debug%20(WebKit2%20Tests)/r111198%20(5036)/platform/mac/accessibility/selected-rows-table-pretty-diff.html
--- /Volumes/Data/slave/lion-intel-debug-tests-wk2/build/layout-test-results/platform/mac/accessibility/selected-rows-table-expected.txt +++ /Volumes/Data/slave/lion-intel-debug-tests-wk2/build/layout-test-results/platform/mac/accessibility/selected-rows-table-actual.txt @@ -11,8 +11,8 @@ PASS addedNotification is true -PASS axTree.selectedRowAtIndex(0).isEqual(axTree.rowAtIndex(0)) is true -PASS axTree.selectedRowAtIndex(1).isEqual(axTree.rowAtIndex(2)) is true +FAIL axTree.selectedRowAtIndex(0).isEqual(axTree.rowAtIndex(0)) should be true. Threw exception TypeError: 'undefined' is not a function (evaluating 'axTree.rowAtIndex(0)') +FAIL axTree.selectedRowAtIndex(1).isEqual(axTree.rowAtIndex(2)) should be true. Threw exception TypeError: 'undefined' is not a function (evaluating 'axTree.rowAtIndex(2)') PASS successfullyParsed is true TEST COMPLETE Unfortunately, due to the state of our tests, I don't know when this started.
Attachments
patch
(5.98 KB, patch)
2012-03-19 13:18 PDT
,
chris fleizach
jberlin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-03-19 11:33:24 PDT
<
rdar://problem/11074696
>
Jessie Berlin
Comment 2
2012-03-19 11:39:07 PDT
Added expected failing results for mac-wk2 in
http://trac.webkit.org/changeset/111210
chris fleizach
Comment 3
2012-03-19 11:50:13 PDT
might be that i forgot to add this method to WK test runner
Jessie Berlin
Comment 4
2012-03-19 11:52:09 PDT
(In reply to
comment #3
)
> might be that i forgot to add this method to WK test runner
Yes, "rowAtIndex" appears to be missing from AccessibilityUIElement.h in WebKitTestRunner's project.
chris fleizach
Comment 5
2012-03-19 13:18:11 PDT
Created
attachment 132642
[details]
patch
Jessie Berlin
Comment 6
2012-03-19 13:25:57 PDT
Comment on
attachment 132642
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132642&action=review
r=me!
> Tools/ChangeLog:8 > + At rowAtIndex to WebKitTestRunner
Typo: "At" instead of "Add". Nit pick: Please end with a period.
> Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:341 > +
Nit pick: please remove this extra line.
chris fleizach
Comment 7
2012-03-19 13:30:09 PDT
http://trac.webkit.org/changeset/111233
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug