platform/mac/accessibility/selected-rows-table.html failing on Lion Intel Debug WebKit2 testers https://bugs.webkit.org/show_bug.cgi?id=81530

Reviewed by Jessie Berlin.

Tools:

Add rowAtIndex to WebKitTestRunner.

* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::rowAtIndex):
* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
(AccessibilityUIElement):
* WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR):
(WTR::AccessibilityUIElement::rowAtIndex):

LayoutTests:

* platform/mac-wk2/platform/mac/accessibility/selected-rows-table-expected.txt: Removed.



Canonical link: https://commits.webkit.org/98776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111233 268f45cc-cd09-0410-ab3c-d52691b4dbfc